crates/sql-orm/tests/ui/audit_fields_unsupported_type.stderr
error[E0277]: the trait bound `Unsupported: SqlTypeMapping` is not satisfied
 --> tests/ui/audit_fields_unsupported_type.rs:7:17
  |
7 |     created_at: Unsupported,
  |                 ^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `SqlTypeMapping` is not implemented for `Unsupported`
 --> tests/ui/audit_fields_unsupported_type.rs:3:1
  |
3 | struct Unsupported;
  | ^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `SqlTypeMapping`:
            Option<T>
            Vec<u8>
            bool
            chrono::naive::date::NaiveDate
            chrono::naive::datetime::NaiveDateTime
            f64
            i32
            i64
          and $N others
