crates/sql-orm/tests/ui/audit_fields_unsupported_type.rs
use sql_orm::prelude::*;

struct Unsupported;

#[derive(AuditFields)]
struct Audit {
    created_at: Unsupported,
}

fn main() {}
